--- a/force-app/main/default/pages/Delivery_Note.page
+++ b/force-app/main/default/pages/Delivery_Note.page
@@ -85,12 +85,13 @@
                             <b style="font-size:14px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:12px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                                 {!pdfheader.Address_Line_2__c}<br/>
-                                {!pdfheader.Gstin__c}<br/><br/>
+                                {!pdfheader.Gstin__c}<br/>
+                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} <br/>
+                            
                                 {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                                 {!pdfheader.BANK__c}<br/>
                                 {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
-                            </div>
+                                </div>
                         </center>
                     </td>
                     <td style="border:none;padding:0px;" width="60%" valign="top">
@@ -483,6 +484,7 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
+                        <apex:outputText value="{!Sales_Order_Dispatch_Delivery_Note__c.Sales_Order__r.Contact_Person__r.salutation}"/>&nbsp;
                         <apex:outputText value="{!Sales_Order_Dispatch_Delivery_Note__c.Sales_Order__r.Contact_Person__r.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -493,6 +495,7 @@
                     </td>
                     
                     <td style="border:none;border-left: 2px solid black;"  valign="top" colspan="2">
+                        <apex:outputText value="{!ShippingObjCon.salutation}"/>&nbsp;
                         <apex:outputText value="{!ShippingObjCon.name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -762,11 +765,13 @@
                             <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                             {!pdfheader.Address_Line_2__c}<br/>
-                            {!pdfheader.Gstin__c}<br/><br/>
+                            {!pdfheader.Gstin__c}<br/>
+                            {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} <br/><br/>
+                                
+                            
                             {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                             {!pdfheader.BANK__c}<br/>
                             {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                            {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
                             </div>
                         </center>
                     </td>
@@ -1101,6 +1106,7 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
+                        <apex:outputText value="{!objCon.salutation}"/>&nbsp;
                         <apex:outputText value="{!objCon.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -1111,6 +1117,7 @@
                     </td>
                     
                      <td style="border:none;border-left: 2px solid black;"  valign="top" colspan="2">
+                         <apex:outputText value="{!ShippingObjCon.salutation}"/>&nbsp;
                         <apex:outputText value="{!ShippingObjCon.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -1452,7 +1459,7 @@
                 </tr>
                 <tr>
                     <td colspan="5"><b><apex:outputText value="Total Amount After Tax " /></b></td>
-                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!FullTotalAmount}" /></td>
+                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!roundtotalamt}.00" /></td>
                 </tr>
                 
                 <tr style="display: {!if(Sales_Order_Dispatch_Delivery_Note__c.Customer_Party__r.TCS_Charges_Enable__c, '', 'none')}">
