--- a/force-app/main/default/pages/QuotePdf.page
+++ b/force-app/main/default/pages/QuotePdf.page
@@ -89,11 +89,13 @@
                             <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                                 {!pdfheader.Address_Line_2__c}<br/>
-                                {!pdfheader.Gstin__c}<br/><br/>
+                                {!pdfheader.Gstin__c}<br/>
+                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c}<br/><br/>
+                                
                                 {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                                 {!pdfheader.BANK__c}<br/>
                                 {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
+                                
                             </div>
                         </center>
                     </td>
@@ -388,6 +390,7 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
+                         <apex:outputText value="{!conBill.salutation}"/> &nbsp;
                         <apex:outputText value="{!conBill.name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -398,6 +401,8 @@
                     </td>
                     
                     <td style="border:none;border-left: 2px solid black;"  valign="top" colspan="2">
+                        <apex:outputText value="{!ShippingContact.salutation}"/>
+                         &nbsp;
                         <apex:outputText value="{!ShippingContact.name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -642,7 +647,7 @@
                 </tr>
                 <tr>
                     <td colspan="5"><b><apex:outputText value="Total Amount After Tax " /></b></td>
-                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmountWithCharges}"/></td>
+                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmountWithCharges}.00"/></td>
                 </tr><tr>
                 <td align="right" colspan="20">
                     <apex:outputText value="For " /><b><apex:outputText value="Powerparts Private Limited " /></b>
