--- a/force-app/main/default/pages/MrnPdf.page
+++ b/force-app/main/default/pages/MrnPdf.page
@@ -85,11 +85,12 @@
                             <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                             {!pdfheader.Address_Line_2__c}<br/>
-                            {!pdfheader.Gstin__c}<br/><br/>
+                            {!pdfheader.Gstin__c}<br/>
+                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} <br/><br/>
+                            
                             {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                             {!pdfheader.BANK__c}<br/>
                             {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                            {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
                             </div>
                         </center>
                     </td>
@@ -309,7 +310,8 @@
                 <tr>
                     
                     <td style="border:none;"  valign="top" colspan="2">
-                        <b><apex:outputText value="{!MRN__c.Supplier_Contact_Name__r.name}" /></b>
+                        <apex:outputText value="{!MRN__c.Supplier_Contact_Name__r.salutation}" />
+                       <apex:outputText value="{!MRN__c.Supplier_Contact_Name__r.name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
                         <apex:outputText value="{!MRN__c.Supplier_Contact_Name__r.MobilePhone}" />
@@ -649,7 +651,8 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
-                        <b><apex:outputText value="{!objMrn.Contact_Person__c}" /></b>
+                        <apex:outputText value="{!objMrn.Contact_Name__r.salutation}" />
+                        <apex:outputText value="{!objMrn.Contact_Person__c}" />
                     </td>
                     <td style="border:none;"  valign="top" >
                         <apex:outputText value="{!objMrn.Contact_No__c}" />
@@ -659,7 +662,9 @@
                     </td>
                     
                     <td style="border:none;border-left: 2px solid black" colspan="2" align="top">
-                        <b><apex:outputText value="{!objMrn.Contact_Person__c}" /></b>
+                        <apex:outputText value="{!objMrn.Contact_Name__r.salutation}" />
+                        
+                        <apex:outputText value="{!objMrn.Contact_Person__c}" />
                     </td>
                     <td style="border:none;"  valign="top" >
                         <apex:outputText value="{!objMrn.Contact_No__c}" />
