--- a/force-app/main/default/pages/Proforma_Invoice_pdf.page
+++ b/force-app/main/default/pages/Proforma_Invoice_pdf.page
@@ -93,12 +93,13 @@
                             <div style="font-size:12px;font-family: Arial;">
                                 <div>{!pdfheader.Address_Line1__c}</div>
                                 <div>{!pdfheader.Address_Line_2__c}</div>
-                                <div>{!pdfheader.Gstin__c}</div><br/>
+                                <div>{!pdfheader.Gstin__c}</div>
+                                <div>{!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c}</div><br/> 
+                            
                                 <div>{!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}</div>
                                 <div>{!pdfheader.BANK__c}</div>
                                 <div>{!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}</div>
-                                <div>{!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c}</div> 
-                            </div>
+                                </div>
                         </center>
                     </td>
                     <td style="border:none;padding:0px;" width="60%" valign="top">
@@ -378,6 +379,7 @@
                         <b><apex:outputText value=":" /></b>
                     </td>
                     <td style="border:none;border-top: 2px solid black;"  valign="top" colspan="2">
+                       
                         <apex:outputText value="{!Acc.Print_Name__c}" />
                     </td>
                     <td style="border:none;border-top: 2px solid black;border-left: 2px solid black;"  valign="top" >
@@ -437,6 +439,7 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
+                        <apex:outputText value="{!con.Salutation}"/> &nbsp;
                         <apex:outputText value="{!Con.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -447,6 +450,7 @@
                     </td>
                     
                     <td style="border:none;border-left: 2px solid black;"  valign="top" colspan="2">
+                          <apex:outputText value="{!ShippingContact.Salutation}"/> &nbsp;
                         <apex:outputText value="{!ShippingContact.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -665,7 +669,7 @@
                 </tr>
                 <tr>
                     <td colspan="5"><b><apex:outputText value="Total Amount After Tax " /></b></td>
-                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmountWithCharges}" /></td>
+                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmountWithCharges}.00" /></td>
                 </tr>
                 <tr style="display: {!if(Acc.TCS_Charges_Enable__c ==true, 'table-row', 'none')}">
                     <td colspan="5"><b><apex:outputText value="TCS Charges : " rendered="{!If(Acc.TCS_Charges_Enable__c ==true,true,false)}"/></b></td>
@@ -678,7 +682,7 @@
             </table>
             <table style="width:100%; border:1px solid black;border-collapse: collapse; margin-top:1%; ">
                     <tr>
-                        <td style="width:40%;">
+                        <td style="width:40%; " valign="top">
                             <center><b><apex:outputText value="Terms And Conditions" /></b></center> 
                             <apex:outputfield value="{!opp.Term_and_Condition__c}"/>
                         </td>
@@ -686,7 +690,7 @@
                             <table style="width:100%;" border="0" >
                                 <tr style="border:none">
                                     <td style="border:none">
-                                        <apex:image url="{!stamp}" width="90" height="90" alt="User Siganture"/>
+                                        <apex:image url="{!stamp}" width="90" height="90" alt="User Signature"/>
                                     </td>
                                 </tr>
                                 <tr style="border:none">
@@ -695,6 +699,7 @@
                                     </td>
                                 </tr>
                             </table>
+                            
                         </td>
                         
                         <td style="width:40%;" align="left">
