--- a/force-app/main/default/pages/SalesOrderReturn_Pdf.page
+++ b/force-app/main/default/pages/SalesOrderReturn_Pdf.page
@@ -84,12 +84,13 @@
                             <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                                 {!pdfheader.Address_Line_2__c}<br/>
-                                {!pdfheader.Gstin__c}<br/><br/>
+                                {!pdfheader.Gstin__c}<br/>
+                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c}<br/> <br/> 
+                            
                                 {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                                 {!pdfheader.BANK__c}<br/>
                                 {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
-                            </div>
+                                </div>
                         </center>
                     </td>
                     <td style="border:none;padding:0px;" width="60%" valign="top">
@@ -178,7 +179,7 @@
                     <td style="width: 50%; text-align: left;border:none"></td>
                 </tr>
                 <tr>              
-                    <td style="width: 20%; text-align: left;border:none" ><apex:outputText value="{!con.name}" />
+                    <td style="width: 20%; text-align: left;border:none" ><apex:outputText value="{!con.salutation}" /><apex:outputText value="{!con.name}" />
                     </td>
                     <td style="width: 12%; text-align: Center;border:none"><apex:outputText value="{!con.Mobilephone}" />
                     </td>
