--- a/force-app/main/default/pages/TaxInvoicePDF.page
+++ b/force-app/main/default/pages/TaxInvoicePDF.page
@@ -96,11 +96,12 @@
                             <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
                             <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
                             {!pdfheader.Address_Line_2__c}<br/>
-                            {!pdfheader.Gstin__c}<br/><br/>
+                            {!pdfheader.Gstin__c}<br/>
+                                {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c}<br/><br/> 
+                            
                             {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
                             {!pdfheader.BANK__c}<br/>
                             {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
-                            {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
                             </div>
                         </center>
                     </td>
@@ -529,6 +530,7 @@
                 </tr>
                 <tr>
                     <td style="border:none;"  valign="top" colspan="2">
+                        <apex:outputText value="{!objInvoice.Contact_Person__r.salutation}" />&nbsp;
                         <apex:outputText value="{!objInvoice.Contact_Person__r.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -539,6 +541,7 @@
                     </td>
                     
                      <td style="border:none;border-left: 2px solid black;"  valign="top" colspan="2">
+                         <apex:outputText value="{!ShippingObjCon.salutation}" />&nbsp;
                         <apex:outputText value="{!ShippingObjCon.Name}" />
                     </td>
                     <td style="border:none;"  valign="top" >
@@ -877,7 +880,7 @@
                 </tr>
                 <tr>
                     <td colspan="5"><b><apex:outputText value="Total Amount After Tax :" /></b></td>
-                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmount}" /></td>
+                    <td colspan="2" style="text-align:right"> <apex:outputText value="{!TotalAmount}.00" /></td>
                 </tr>
                 <tr>
                     <td colspan="9" rowspan="15" valign="top">
